longhorn/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: longhorn.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-ui
                port:
                  number: 80
